[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "reflex-type-animation"
version = "0.0.1"
description = "Reflex custom component type-animation"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
authors = [{ name = "Elijah Ahianyo", email = "elijahahianyo@gmail.com" }]
keywords = [
    "reflex",
    "reflex-custom-components",
    "typing animation"
]

dependencies = [
    "reflex>=0.4.2"
]

classifiers = [
  "Development Status :: 4 - Beta",
]

[project.urls]
Homepage = "https://github.com/ElijahAhianyo/reflex-type-animation"

[project.optional-dependencies]
dev = ["build", "twine"]

[tool.setuptools.packages.find]
where = ["custom_components"]